Further simplify sidebar and introduce console-style hubs

--- a/backend/astrology/templates/astrology/index.html
+++ b/backend/astrology/templates/astrology/index.html
@@ -618,6 +618,9 @@
 
             {% include 'astrology/partials/section_mega_analysis.html' %}
             {% include 'astrology/partials/section_harmony.html' %}
+            {% include 'astrology/partials/section_personal_hub.html' %}
+            {% include 'astrology/partials/section_mystic_hub.html' %}
+            {% include 'astrology/partials/section_library_hub.html' %}
 
             {% if user.is_staff or user.is_superuser %}
             {% include 'astrology/partials/section_editor.html' %}
